--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ mycpu_env/soc_verify/soc_hs_bram/run_vivado/project/*
 mycpu_env/soc_verify/soc_axi/rtl/xilinx_ip/*
 mycpu_env/soc_verify/soc_axi/run_vivado/project/*
 !mycpu_env/soc_verify/soc_axi/rtl/xilinx_ip/*.xci
+
+# mycpu
+mycpu/*
+
+# ip_repo
+ip_repo/*
