--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ modules.builtin
 *.cache/
 *.hw/
 *.log
-vivado*
+*.jou
+*.str
 
 #
 # git files that we don't want to ignore even if they are dot-files
